<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvUniversityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_university_name"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvUniversityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/label_university_name"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvUniversityLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvUniversityStateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_state"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvUniversityName"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvUniversityState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/label_university_name"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvUniversityStateLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvCountryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_country"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvUniversityState"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/label_university_name"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvCountryLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_code"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvCountry"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/label_university_name"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvCodeLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvWebsiteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_website"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvCode"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/label_university_name"
        android:textSize="14sp"
        android:linksClickable="true"
        android:autoLink="all"
        android:textColorLink="@color/material_dynamic_primary50"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvWebsiteLabel"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
